# ipdps2020-mpi-betweenness

./: .gitignore  README.md  experiments.yml
dist-kadabra/: DistributedKadabra.cpp  DistributedKadabra.hpp  main.cpp  meson.build
fabry/: main.cpp  meson.build
fabry/include/fabry/: fabry.hpp  internal-base.hpp  internal-icb.hpp
fabry/lib/: fabry.cpp
networkit/: CMakeLists.txt
networkit/include/networkit/graph/: Graph.hpp
networkit/networkit/cpp/auxiliary/: Log.cpp
networkit/networkit/cpp/graph/: Graph.cpp
networkit/networkit/cpp/io/: NetworkitBinaryWriter.cpp
results/: descriptive.ipynb  eval-realworld-for-hlrn.ipynb  eval-realworld-perf-ipdps-submission.ipynb  eval-realworld-perf.ipynb  eval-synthetic.ipynb  ipdps-submission-experiments.yml
